--- a/Pages/Index.razor
+++ b/Pages/Index.razor
@@ -1,3 +1,8 @@
 ﻿@page "/"
 
-<h1>Hello, world!</h1>
+
+<MudContainer MaxWidth="MaxWidth.Small">
+    <MudText Typo="Typo.h4" Align="Align.Center">
+        Welcome, <br/> to Xira a Personal Financial Tracker!
+    </MudText>
+</MudContainer>
