--- a/_Imports.razor
+++ b/_Imports.razor
@@ -2,3 +2,6 @@
 @using Microsoft.AspNetCore.Components.Web
 @using Microsoft.JSInterop
 @using XiraPFT
+@using MudBlazor
+@using Shared
+@using Shared.Layouts
